Feature/release 1.0.3 (#234)
* Correct typos and replace deprecated method

* Set final Version